# ProjectGaruda

./: .gitignore  DSHOT_IMPLEMENTATION.md  PHASE2_ADC_ZC_PLAN.md  PHASE2_BEMF_CLOSED_LOOP_PLAN.md  PHASE2_CLOSED_LOOP_DOCUMENTATION.md  PHASE_H_PLAN_v25.md  PROJECT_FEATURES.md  Project_Garuda_Claude_Code_Implementation_Plan.md  Project_Garuda_Detailed_Implementation_Plan_v2.md  Project_Garuda_Implementation_Plan_v1.5.md  Project_Garuda_dsPIC_Drone_ESC_Specification_v1.3 (1).docx  README.md  index.html  reference_esc_comparison.md
PATA6847/: CLAUDE.md  PROMPT_RX_INPUT_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md
assets/: index-Bf-1DwEn.js  index-BvKo-yHJ.css  index-ByCGpxtO.js  index-CUN-6tla.js  index-CxQ9imr2.js  index-DCBc0qCS.js  index-DVPNwR1A.js
docs/: adaptive_zc_threshold_research.md  an1078_200k_optimization.md  an1078_add_new_motor.md  an1078_gui_tuning_workflow.md  an1078_motor_tuning_guide.md  an1078_startup_handoff.md  an1078_vs_ti_esmo_study.md  commutation_kickback_findings.md  foc_architecture.md  foc_v3_implementation.md  migration_dsPIC33AK512MC510.md  (+3 more)
tools/garuda_debug/: .gitignore  INSTALL_WINDOWS.md  README.md  collect_ml.py  gui_launcher.py  pyproject.toml
tools/garuda_debug/docs/: sim_roadmap.md
tools/garuda_debug/garuda_gsp/: __init__.py  analyze.py  autotune.py  broker.py  client.py  decode.py  framing.py  garuda_mcp.py  protocol.py  session.py
tools/garuda_debug/garuda_gui/: __init__.py  app.py  diagnose.py  pisim.py  spice_engine.py  wizard.py  zcml.py  zcsim.py
tools/garuda_debug/scripts/: gsp_info.py  gsp_record.py
(+397 files in other folders)
